<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop Navigator</string>
    <string name="shop_item_hint">Enter name of shop item</string>
    <string name="save">Save item</string>
    <string name="cancel">Cancel</string>
    <string name="mark_zero_coordinates">Mark zero coordinates</string>
    <string name="add_item">Add item</string>
    <string name="defaults_coordinates_text">Coordinates are: 0.00000 0.00000</string>
    <string name="save_map">Save map</string>
    <string name="load_map">Load map</string>
    <string name="map_name_hint">Enter map name</string>
    <string name="close_map">Close map</string>

</resources>
