<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AndroidLauncher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".AndroidLauncher">
        <Button
            android:id="@+id/markZeroLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_zero_coordinates" />
        <Button
            android:id="@+id/addItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item" />
        <Button
            android:id="@+id/saveMapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_map" />
        <Button
            android:id="@+id/loadMapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_map" />
        <Button
            android:id="@+id/closeMapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_map" />
        <TextView
            android:id="@+id/coordinatesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/defaults_coordinates_text"
            android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        tools:context=".AndroidLauncher">
    </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>